home screen buttons changed

--- a/index.html
+++ b/index.html
@@ -6,8 +6,24 @@
         <link rel="stylesheet" href="styles.css">
         
 <div class = "buttons" >
-        <button class = "button" onclick="window.location.href='shop.html';">SHOP</button>
-        <button class = "button" onclick="window.location.href='planets.html';">PLANETS</button>
+        <a href="#" class="btn-wrapper">
+			<div class="btn-tail"></div>
+			<div class="btn-body">
+				<p>Shop<span onclick="window.location.href='shop.html';" style='font-size: 0.7rem; margin-left: 5px;'>Buy Some Items</span></p>
+			</div>
+		</a>
+        <a href="#" class="btn-wrapper">
+			<div class="btn-tail"></div>
+			<div class="btn-body">
+				<p>Planets<span onclick="window.location.href='planets.html';" style='font-size: 0.7rem; margin-left: 5px;'>Explore Known Planets</span></p>
+			</div>
+		</a>
+        <a href="#" class="btn-wrapper">
+			<div class="btn-tail"></div>
+			<div class="btn-body">
+				<p>Quests<span onclick="window.location.href='shop.html';" style='font-size: 0.7rem; margin-left: 5px;'>Known Quests of the Universe</span></p>
+			</div>
+		</a>
     </div>
     </body>
 
