formatting and new buttons

--- a/shop.html
+++ b/shop.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta charset="UTF-8">
-    <title>Home Page!</title>
-    <body>
-        <link rel="stylesheet" href="shopstyles.css">
-       
+<meta charset="UTF-8">
+<title>Home Page!</title>
+
+<body>
+  <link rel="stylesheet" href="shopstyles.css">
+
+  </div>
+  <button class="button" onclick="window.location.href='index.html';">GO BACK</button>
+  <div>
+    <div class="gallery">
+      <a target="_blank" href="img_5terre.jpg">
+        <img class="item" src="img/pistol.png" alt="Cinque Terre" width="600" height="400">
+      </a>
+      <div class="desc">
+        <p>Laser pistol </p> 500 creds
+      </div>
     </div>
-        <button class = "button" onclick="window.location.href='index.html';">GO BACK</button>
+
+
     <div>
-        <div class="gallery">
-            <a target="_blank" href="img_5terre.jpg">
-              <img class = "item"  src="pistol.png" alt="Cinque Terre" width="600" height="400">
-            </a>
-            <div class="desc"><p>Laser pistol </p> 500 creds</div>
-          </div>
-
-
-          <div>
-            <div class="gallery">
-                <a target="_blank" href="img_5terre.jpg">
-                  <img  src="trash.png" alt="Cinque Terre" width="600" height="400">
-                </a>
-                <div class="desc"><p>Laser pistol </p> 500 creds</div>
-              </div>     
-    </body>
+      <div class="gallery">
+        <a target="_blank" href="img_5terre.jpg">
+          <img src="img/trash.png" alt="Cinque Terre" width="600" height="400">
+        </a>
+        <div class="desc">
+          <p>Laser pistol </p> 500 creds
+        </div>
+      </div>
+</body>
 
 </html>
