--- a/index.html
+++ b/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta charset="UTF-8">
-    <title>Home Page!</title>
-    <body>
-        <link rel="stylesheet" href="styles.css">
-        
-<div class = "buttons" >
+<meta charset="UTF-8">
+<title>Home Page!</title>
+
+<body>
+    <link rel="stylesheet" href="styles.css">
+    <h1>WELCOME TO COMMAND CENTRAL</h1>
+    <div class="buttons">
         <a href="#" class="btn-wrapper">
-			<div class="btn-tail"></div>
-			<div class="btn-body">
-				<p>Shop<span onclick="window.location.href='shop.html';" style='font-size: 0.7rem; margin-left: 5px;'>Buy Some Items</span></p>
-			</div>
-		</a>
+            <div onclick="window.location.href='shop.html';" class="btn-tail"></div>
+            <div onclick="window.location.href='shop.html';" class="btn-body">
+                <p>Shop<span onclick="window.location.href='shop.html';"
+                        style='font-size: 0.7rem; margin-left: 5px;'>Buy Some Items</span></p>
+            </div>
+        </a>
         <a href="#" class="btn-wrapper">
-			<div class="btn-tail"></div>
-			<div class="btn-body">
-				<p>Planets<span onclick="window.location.href='planets.html';" style='font-size: 0.7rem; margin-left: 5px;'>Explore Known Planets</span></p>
-			</div>
-		</a>
+            <div onclick="window.location.href='planets.html';" class="btn-tail"></div>
+            <div onclick="window.location.href='planets.html';" class="btn-body">
+                <p>Planets<span onclick="window.location.href='planets.html';"
+                        style='font-size: 0.7rem; margin-left: 5px;'>Explore Known Planets</span></p>
+            </div>
+        </a>
         <a href="#" class="btn-wrapper">
-			<div class="btn-tail"></div>
-			<div class="btn-body">
-				<p>Quests<span onclick="window.location.href='shop.html';" style='font-size: 0.7rem; margin-left: 5px;'>Known Quests of the Universe</span></p>
-			</div>
-		</a>
+            <div onclick="window.location.href='shop.html';" class="btn-tail"></div>
+            <div onclick="window.location.href='shop.html';" class="btn-body">
+                <p>Quests<span onclick="window.location.href='shop.html';"
+                        style='font-size: 0.7rem; margin-left: 5px;'>Known Quests of the Universe</span></p>
+            </div>
+        </a>
     </div>
-    </body>
+</body>
 
 </html>
