--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
 <body>
     <link rel="stylesheet" href="styles.css">
-    <h1>WELCOME TO COMMAND CENTRAL</h1>
+ 
+    <div class='console-container'><span id='text'></span><div class='console-underscore' id='console'>&#95;</div></div>
     <div class="buttons">
         <a href="#" class="btn-wrapper">
             <div onclick="window.location.href='shop.html';" class="btn-tail"></div>
@@ -29,6 +30,7 @@
             </div>
         </a>
     </div>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
