--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <meta charset="UTF-8">
 <title>Home Page!</title>
 
-<body>
+<body onload="document.body.style.opacity='1'">
+
+    <style>
+        body {
+            opacity: 0;
+            transition: opacity 2s;
+        }
+    </style>
     <link rel="stylesheet" href="styles.css">
  
     <div class='console-container'><span id='text'></span><div class='console-underscore' id='console'>&#95;</div></div>
