--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,16 @@
 <meta charset="UTF-8">
 <title>Home Page!</title>
 
-<body>
+<body onload="document.body.style.opacity='1'">
+
+  <style>
+    body {
+        opacity: 0;
+        transition: opacity 2s;
+    }
+
+
+</style>
   <link rel="stylesheet" href="shopstyles.css">
 
   </div>
