--- a/shop.html
+++ b/shop.html
@@ -7,36 +7,162 @@
 
   <style>
     body {
-        opacity: 0;
-        transition: opacity 2s;
+      opacity: 0;
+      transition: opacity 2s;
     }
-
-
-</style>
+  </style>
   <link rel="stylesheet" href="shopstyles.css">
 
   </div>
   <button class="button" onclick="window.location.href='index.html';">GO BACK</button>
-  <div>
-    <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
-        <img class="item" src="img/pistol.png" alt="Cinque Terre" width="600" height="400">
-      </a>
-      <div class="desc">
-        <p>Laser pistol </p> 500 creds
-      </div>
-    </div>
+  <div class="listings">
+    <div class="row">
 
-
-    <div>
       <div class="gallery">
-        <a target="_blank" href="img_5terre.jpg">
+        <a target="_blank">
+          <img class="item" src="img/pistol.png" alt="Cinque Terre" width="600" height="400">
+        </a>
+        <div class="desc">
+          <p>Laser pistol </p> 500 creds
+        </div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank">
           <img src="img/trash.png" alt="Cinque Terre" width="600" height="400">
         </a>
         <div class="desc">
           <p>Laser pistol </p> 500 creds
         </div>
       </div>
+
+      <div class="gallery">
+        <a target="_blank">
+          <img class="item" src="img/pistol.png" alt="Cinque Terre" width="600" height="400">
+        </a>
+        <div class="desc">
+          <p>Laser pistol </p> 500 creds
+        </div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank">
+          <img class="item" src="img/pistol.png" alt="Cinque Terre" width="600" height="400">
+        </a>
+        <div class="desc">
+          <p>Laser pistol </p> 500 creds
+        </div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank">
+          <img class="item" src="img/pistol.png" alt="Cinque Terre" width="600" height="400">
+        </a>
+        <div class="desc">
+          <p>Laser pistol </p> 500 creds
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+
+      <div class="gallery">
+        <a target="_blank">
+          <img class="item" src="img/pistol.png" alt="Cinque Terre" width="600" height="400">
+        </a>
+        <div class="desc">
+          <p>Laser pistol </p> 500 creds
+        </div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank">
+          <img src="img/trash.png" alt="Cinque Terre" width="600" height="400">
+        </a>
+        <div class="desc">
+          <p>Laser pistol </p> 500 creds
+        </div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank">
+          <img class="item" src="img/pistol.png" alt="Cinque Terre" width="600" height="400">
+        </a>
+        <div class="desc">
+          <p>Laser pistol </p> 500 creds
+        </div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank">
+          <img class="item" src="img/pistol.png" alt="Cinque Terre" width="600" height="400">
+        </a>
+        <div class="desc">
+          <p>Laser pistol </p> 500 creds
+        </div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank">
+          <img class="item" src="img/pistol.png" alt="Cinque Terre" width="600" height="400">
+        </a>
+        <div class="desc">
+          <p>Laser pistol </p> 500 creds
+        </div>
+      </div>
+    </div>
+    <div class="row">
+
+      <div class="gallery">
+        <a target="_blank">
+          <img class="item" src="img/pistol.png" alt="Cinque Terre" width="600" height="400">
+        </a>
+        <div class="desc">
+          <p>Laser pistol </p> 500 creds
+        </div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank">
+          <img src="img/trash.png" alt="Cinque Terre" width="600" height="400">
+        </a>
+        <div class="desc">
+          <p>Laser pistol </p> 500 creds
+        </div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank">
+          <img class="item" src="img/pistol.png" alt="Cinque Terre" width="600" height="400">
+        </a>
+        <div class="desc">
+          <p>Laser pistol </p> 500 creds
+        </div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank">
+          <img class="item" src="img/pistol.png" alt="Cinque Terre" width="600" height="400">
+        </a>
+        <div class="desc">
+          <p>Laser pistol </p> 500 creds
+        </div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank">
+          <img class="item" src="img/pistol.png" alt="Cinque Terre" width="600" height="400">
+        </a>
+        <div class="desc">
+          <p>Laser pistol </p> 500 creds
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+
+
 </body>
 
 </html>
