--- a/shop.html
+++ b/shop.html
@@ -13,8 +13,18 @@
   </style>
   <link rel="stylesheet" href="shopstyles.css">
 
-  </div>
-  <button class="button" onclick="window.location.href='index.html';">GO BACK</button>
+
+  
+    <a href="#" class="btn-wrapper">
+      <div onclick="window.location.href='index.html';" class="btn-tail"></div>
+      <div onclick="window.location.href='index.html';" class="btn-body">
+        <p>GO BACK<span onclick="window.location.href='shop.html';" style='font-size: 0.7rem; margin-left: 5px;'>Return
+            to Home Page</span></p>
+      </div>
+
+    </a>
+
+
   <div class="listings">
     <div class="row">
 
