--- a/shop.html
+++ b/shop.html
@@ -14,15 +14,15 @@
   <link rel="stylesheet" href="shopstyles.css">
 
 
-  
+  <div class="buttons">
     <a href="#" class="btn-wrapper">
       <div onclick="window.location.href='index.html';" class="btn-tail"></div>
       <div onclick="window.location.href='index.html';" class="btn-body">
-        <p>GO BACK<span onclick="window.location.href='shop.html';" style='font-size: 0.7rem; margin-left: 5px;'>Return
+        <p>GO BACK<span onclick="window.location.href='index.html';" style='font-size: 0.7rem; margin-left: 5px;'>Return
             to Home Page</span></p>
       </div>
-
     </a>
+  </div>
 
 
   <div class="listings">
