made quest page

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             </div>
         </a>
         <a href="#" class="btn-wrapper">
-            <div onclick="window.location.href='shop.html';" class="btn-tail"></div>
-            <div onclick="window.location.href='shop.html';" class="btn-body">
-                <p>Quests<span onclick="window.location.href='shop.html';"
+            <div onclick="window.location.href='quest.html';" class="btn-tail"></div>
+            <div onclick="window.location.href='quest.html';" class="btn-body">
+                <p>Quests<span onclick="window.location.href='quest.html';"
                         style='font-size: 0.7rem; margin-left: 5px;'>Known Quests of the Universe</span></p>
             </div>
         </a>
