--- a/planets.html
+++ b/planets.html
@@ -6,9 +6,15 @@
 <body>
     <link rel="stylesheet" href="planetstyles.css">
 
-    </div>
-    <button class="button" onclick="window.location.href='index.html';">GO BACK</button>
-    <div>
+    <div class="buttons">
+        <a href="#" class="btn-wrapper">
+          <div onclick="window.location.href='index.html';" class="btn-tail"></div>
+          <div onclick="window.location.href='index.html';" class="btn-body">
+            <p>GO BACK<span onclick="window.location.href='index.html';" style='font-size: 0.7rem; margin-left: 5px;'>Return
+                to Home Page</span></p>
+          </div>
+        </a>
+      </div>
 </body>
 
 </html>
